2002-12-13  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (Compiler.Compile): Use ...
	(Compiler.ExecuteCommand): ... this new method.
	* compiler_test.py (CompilerTest.Run): Record commands before
	trying to execute the compiler.
	* gcc_database.py (GPPBprobTest): Likewise.

2002-11-15    <Mark Mitchell <mark@codesourcery.com>>

	* compiler.py (resource): Don't import it under Windows.
	* compiler_test.py (CompilerTest._CheckStatus): Adjust handling
	for Windows.

2002-11-14  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (CompilerExecutable): Derive from QM's
	RedirectedExecutable class.
	* compiler_test.py (CompiledExecutable): Likewise.
	* executable.py: Remove.
	* gcc_database.py (Demangler): Derive from QM's
	RedirectedExecutable class.

2002-11-06  Mark Mitchell  <mark@codesourcery.com>

	* compiler_test.py (arguments): Remove.
	(CompilerTest.Run): Use HTML formatting.
	(CompilerTest._CheckStatus): Likewise.
	(CompilerTest._GetDirectoryForTest): Compute it, rather than
	expecting the database to pass it in.
	* gcc_database.py (GPPBprobTest.Run): Use HTML formatting.
	(GCCDatabase.GetTest): Do not pass in a directory.
	* classes.qmc: New file.

2002-10-31  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (GPP.GetObjectNames): Remove.
	(EDG): New class.
	* compiler_test.py (CompilerTest.__init__): Remove.
	* gcc_database.py (GCCTest.__init__): Add **extras parameter.
	(CPPTest.__init__): Likewise.
	(GPPTest._CreateCompiler): New method.
	
2002-06-30  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (Compiler.ParseOutput): Raise NotImplementedError,
	rather than using an assert, to indicate a method that must be
	overridden.
	* compiler_test.py (CompilerTest._GetCompiler): Likewise.
	(CompilerTest._GetCompilationSteps): Likewise.

	* compiler.py (GPP.GetExecutableName): Remove.

2002-06-19  Mark Mitchell  <mark@codesourcery.com>

	* compiler.py (SourcePosition.__init__): Remove incorrect
	assertion.